# fundy_crawling

./: .gitignore  README.md  SiteList.md  data_processor_agent.py  data_processor_design.md  fundy_exports.xlsx  fundy_processed_exports.csv  fundy_processed_exports.xlsx  pyproject.toml  requirements.txt  run_all.py  scrapy.cfg  targets.yaml
fundy_crawler/: items.py  middlewares.py  models.py  pipelines.py  settings.py
log/: collection_report.txt  gov24_detail_api_resp.json  gov24_detail_api_resp_readable.txt  gov24_resp.txt  kstartup_list.html  run_test_crawl_gov24.txt  run_test_crawl_gov24_final.txt  run_test_crawl_gov24_retry.txt  run_test_crawl_gov24_title.txt  run_test_crawl_gov24_utf8.txt  run_test_gov24.txt  run_test_gov24_final_utf8.txt  run_test_gov24_retry_utf8.txt  run_test_gov24_title_utf8.txt  run_test_gov24_utf8.txt  run_test_gov24_v2.txt  run_test_gov24_v2_utf8.txt  run_test_gov24_v3.txt  run_test_gov24_v4.txt  run_test_out.txt  run_test_out2.txt  run_test_smes.txt  run_test_smes_utf8.txt  run_test_smes_v2.txt  run_test_smes_v2_utf8.txt  smes24_detail.html  smes24_detail_pw.html  smes24_dts.txt  smes24_list.html  table_smes.txt  temp_dom.html  temp_dom.txt  test_crawl_result.json
scripts/: capture_api.py  check_data_quality.py  cleanup_garbage_data.py  create_yaml_from_md.py  export_processed_to_csv.py  export_to_csv.py  fetch_kstartup.py  generate_report.py  verify_export.py
tests/: _debug_bizinfo.py  check_db.py  check_gov24.py  diag_db.py  run_test.py  test_crawl.py  test_gov.py  test_gov24_api.py  test_inner.py  test_mbuster.py  test_mbuster2.py  (+6 more)
(+5 files in other folders)
